Fix parallax to be static bg on mobiles and tablets

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -750,8 +750,9 @@ span.text-content span span a:hover i{
 
 #section-parallax {
 	height:450px;
-	background: url('img/parallax-1.jpg') no-repeat fixed;
+	background-attachment: fixed;
 	background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #section-parallax h1 {
@@ -785,8 +786,9 @@ span.text-content span span a:hover i{
 
 #section-parallax-2 {
 	min-height:450px;
-	background: url('img/parallax-2.jpg') no-repeat fixed;
+	background-attachment: fixed;
 	background-size: cover;
+    background-repeat:no-repeat;
 }
 
 #section-parallax-2 h2 {
@@ -1147,7 +1149,7 @@ border-bottom: 1px solid #ccc;
 	float:none;
 	display: inline-block;
 	vertical-align: top;
-	padding: 0;
+	padding: 2%;
 	width:24%;
 }
 
@@ -1787,11 +1789,15 @@ ul[data-level="0"]>li > div[id^="comment-"]> .comment-right .comment-border .rat
 		padding:0;
 	}
 
-	
+    /* turn off parallax js, and set static bg*/	
+    #section-parallax, #section-parallax-2 {
+        background-size: cover!important; /*auto 100%!important;*/
+        background-attachment: scroll!important; /*iOs doesnt like fixed*/
+        background-position: center center;
+    }
 
 	#section-parallax-2 {
 		height:100%;
-		background-size: auto;
 	}
 
 	#section-site-map .logicon-info {
@@ -1891,10 +1897,6 @@ ul[data-level="0"]>li > div[id^="comment-"]> .comment-right .comment-border .rat
 		display: none;
 	}
 
-    #section-parallax, #section-parallax-2 {
-        background-size: auto 100%;
-    }
-
     #page-about-us .column-one-quarter {
         width:100%;
         padding: 2%;
@@ -1913,5 +1915,3 @@ ul[data-level="0"]>li > div[id^="comment-"]> .comment-right .comment-border .rat
         width:100%;
     }
 }
-
-/*******************PORTFOLIO ITEM CAROUSEL*********************/
